# trampoline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
test/: test_trampoline.py  test_trampy.py
trampoline/: __impl.py  __init__.py
trampy/: __init__.py
